Update on the banner side of the header

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 		<link href="//www.google-analytics.com" rel="dns-prefetch">
 		<link href="//ajax.googleapis.com" rel="dns-prefetch">
 
-
-		<meta name="csrf_token" content="oKJnfhwi1TjScQSWqvhiSwUc0Aj5jYV4HaM2gjsk">
-		<meta property="fb:app_id" content="256860884709676">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Ezeweputa Christopher on Selar.co">
 		<meta property="og:description" content="Products by Ezeweputa Christopher on Selar.co.">
@@ -98,7 +95,7 @@
 						<div class="banner-content col-lg-7 mt-8">
 							<h5 class="text-white text-uppercase">Author: Ezeweputa Christopher</h5>
 							<h1 class="text-uppercase mb-8">
-								Unveil the Mysteries of Life with this author			
+								Unveil the Mysteries of Life with my Books			
 							</h1>
 							<!-- <p class="text-white pt-20 pb-20">
 								Unveil the Mysteries of Life with this author
@@ -106,7 +103,7 @@
 							<a href="#" class="primary-btn text-uppercase"></a>
 							<a href="#" class="primary-btn text-uppercase">Visit Book Store</a>
 						</div>
-						<div class="col-lg-5 banner-right mt-20">
+						<div class="col-lg-5 banner-right mt-[-200px] md:mt-20">
 							<img class="img-fluid" src="img/header-img.png" alt="">
 						</div>												
 					</div>
