Update on the Authors details and some other changes

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-start">
 						<div class="banner-content col-lg-7 mt-8">
-							<h5 class="text-white text-uppercase">Author: Ezeweputa Christopher</h5>
+							<h5 class="text-white text-uppercase">Author: McDonald Chris</h5>
 							<h1 class="text-uppercase mb-8">
-								Unveil the Mysteries of Life with my Books			
+								UNVEIL THE MYSTERIES OF LIFE WITH MY BOOKS			
 							</h1>
 							<!-- <p class="text-white pt-20 pb-20">
 								Unveil the Mysteries of Life with this author
@@ -114,24 +114,60 @@
 			<!-- Start about Area -->
 			<section class="section-gap info-area" id="about">
 				<div class="container">				
-					<div class="single-info row mt-30 align-items-center">
-						<div class="col-lg-6 col-md-12 text-center no-padding info-left">
+					<div class="single-info row mt-0 justify-center items-center">
+						<!-- <div class="col-lg-6 col-md-12 text-center no-padding info-left">
 							<div class="info-thumb">
 								<img src="img/about-img.jpg" class="img-fluid info-img" alt="">
 							</div>
-						</div>
-						<div class="col-lg-6 col-md-12 no-padding info-rigth">
-							<div class="info-content">
-								<h2 class="pb-30">Dr. Ezeweputa Christopher</h2>
+						</div> -->
+						<div class="col-lg-8 col-md-12 no-padding mx-8">
+							<div class="info-content text-justify">
+								<h2 class="pb-30">MEET THE MASTER WORDSMITH WITH A DECADE AND A HALF OF ENCHANTMENT </h2>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women.								
+									For over 15 years, McDonald Chris has been a beacon of inspiration in the eBook realm,
+									weaving words into worlds that captivate, educate,
+									and resonate with readers across the globe with a 
+									tapestry of titles ranging from self-help to 
+									science fiction, McDonalds’ eBooks are more than 
+									just pages-They’re portals.								
 								</p>
 								<br>
 								<p>
-									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women. inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women.									
+									As pioneer in digital narrative, McDonald Chris embraced the eBook revolution 
+									from its dawn, crafting narratives that blend timeless 
+									wisdom with cutting-edge insights. Each eBook is a 
+									culmination of meticulous research heartfelt expression, 
+									and a deep understanding of what ignites the human spirit.									
 								</p>
 								<br>
-								<h2 class="italic font-bold">Chris E</h2>
+								<p>
+									McDonald Chris’s journey began with a simple 
+									belief: Knowledge should be accessible and 
+									engaging. This ethos has fueled a prolific 
+									career, producing a library of works 
+									that serve as lighthouses for those 
+									navigating the seas of personal growth, 
+									business innovation, and creative expression.								
+								</p>
+								<br>
+								<p>
+									Readers are not just customers, they’re explorers who 
+									trust McDonald Chris to guide them through new 
+									territories of thought and possibility with every 
+									eBook, you’re not just turning pages you’re turning 
+									the key to new perspectives and untapped potential.  									
+								</p>
+								<br>
+								<p>
+									Join the legion of lifelong learners and 
+									adventurers who have found value, 
+									vision and voice through McDonald’s eBooks. 
+									Experience the power of writing that 
+									transcends the ordinary and propels you 
+									towards the extraordinary.									
+								</p>
+								<br>
+								<h2 class="italic font-bold">McDonald Chris</h2>
 								</div>
 						</div>
 					</div>
@@ -157,9 +193,24 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/the-libido-solution-7-nat-selar.co-665f1b29d6208.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									Embark on a transformative journey to 
+									reclaim your passion and energy with 
+									“The Libido Solution” The essential eBook unveils:
+								</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">Ancient wisdom</li>
+									<li class="ml-0">Dietary revamp </li> 
+									<li class="ml-0">Lifestyle overhaul </li> 
+									<li class="ml-0">Stress-busting techniques </li> 
+									<li class="ml-0">Exercise routines </li> 
+									<li class="ml-0">Natural supplement </li> 
+									<li class="ml-0">Holistic health practices </li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Revive your libido and vitality naturally, 
+									secure your copy of “The Libido Solution” 
+									today and experience the transformation. 
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 79.99</h1> -->
@@ -172,9 +223,24 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/unleashing-the-power-of-s-selar.co-665058a026b91.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									In the digital age, social media is the 
+									battleground where brands are built and 
+									thrive. Our eBook, “Unleashing the power 
+									of Social media content for business 
+									success”, is your ultimate guide of 
+									conquering this space. Inside you’ll 
+									discover:
+									</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">Strategic content creation</li>
+									<li class="ml-0">Engagement techniques</li> 
+									<li class="ml-0">Analytics and Adaptation</li> 
+									<li class="ml-0">Influencer collaboration</li> 
+									<li class="ml-0">Viral marketing secrets</li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Take the leap and transform your business with the power of social media content. Get your copy today!
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 99.99</h1> -->
@@ -187,9 +253,26 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/igniting-financial-succes-selar.co-6650561f4dce6.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									Discover the blueprint to finance prosperity 
+									in the digital era with our cutting-edge eBook, 
+									“Igniting Financial Success with Social Media 
+									Strategies”. This guide is packed with innovation 
+									techniques and insights that will empower you to 
+								</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">Understand the Power of Social Media</li>
+									<li class="ml-0">Setting the Foundation for Success</li> 
+									<li class="ml-0">Crafting Compelling Content that Converts</li> 
+									<li class="ml-0">Building a Strong Social Media Presence</li> 
+									<li class="ml-0">Growing Your Audience and Community</li>
+									<li class="ml-0">Driving Sales and Revenue with Social Media</li>
+									<li class="ml-0">Scaling Up and Sustaining Success</li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Step into the world of financial growth 
+									and let social media be your guide. Secure 
+									your copy now and start your journey to financial success.   
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 59.99</h1> -->
@@ -204,9 +287,23 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/unlocking-the-power-of-fi-selar.co-66505440ce8fd.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									Embark on a journey to everlasting health 
+									with our transformative eBook, “Unlocking the 
+									power of fitness for Longevity”. This comprehensive 
+									guide is your key to:
+								</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">Sustainable fitness habits</li>
+									<li class="ml-0">Age defying workouts</li> 
+									<li class="ml-0">Nutritional wisdom</li> 
+									<li class="ml-0">Mind-body connection</li> 
+									<li class="ml-0">Long-term health strategies</li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Dive into the fountain of youth through fitness. 
+									Get your copy today and start unlocking the secrets 
+									to a longer, more vibrant life!
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 79.99</h1> -->
@@ -219,9 +316,22 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/mastering-3d-logo-design-selar.co-665052b3dd74c.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									Step into the future of branding with 
+									“Mastering 3D Logo Design,” The definitive 
+									eBook for designers and entrepreneurs alike. 
+									This guide offers:</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">In-Depth Tutorials</li>
+									<li class="ml-0">Fundamentals of 3D Design</li> 
+									<li class="ml-0">Getting Started with 3D Design</li> 
+									<li class="ml-0">Understanding Logo Design Principles</li> 
+									<li class="ml-0">Shape and Form in 3D Logo Design</li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Transform your brand’s identity with 
+									the power of 3D. Download your copy now 
+									and start crafting logos that leave a lasting impression! 
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 99.99</h1> -->
@@ -234,9 +344,22 @@
 								<div class="price-top flex justify-center items-center h-full">
 									<img src="https://files.selar.co/product-images/2024/products/ezeweputa-christopher1/how-visual-branding-drive-selar.co-66504e4cc297d.jpeg" alt="">
 								</div>
-								<p>
-									Who are in extremely love with <br>
-									eco friendly system.
+								<p class="text-justify mx-2 my-[-18px]">
+									Transform your business identity with 
+									our insightful eBook, “How Visual Branding 
+									Drives Business Success”. This essential guide unveils: 
+									</p>
+								<ul class="list-disc mx-8 my-0 text-justify">
+									<li class="ml-0">Understand the Power of Visual Branding</li>
+									<li class="ml-0">Defining Your Brand Identity</li> 
+									<li class="ml-0">Crafting Your Visual Brand Strategy</li> 
+									<li class="ml-0">The Role of Logo Design in Branding</li> 
+									<li class="ml-0">Creating Consistent Branding across platform</li> 
+								</ul>
+								<p class="text-justify mx-2 my-[-18px]">
+									Elevate your brand with the silent 
+									language of visuals. Grab your copy 
+									today and start your journey to business success.
 								</p>
 								<div class="price-bottom">
 									<!-- <h1><span>$</span> 59.99</h1> -->
@@ -256,18 +379,28 @@
 					<div class="row">
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget mb-16">
-								<h6>About Author</h6>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+								<h6>About M Chris</h6>
+								<p class="text-justify">
+									For over 15 years, McDonald Chris has been a beacon 
+									of inspiration in the eBook realm, weaving words into 
+									worlds that captivate, educate, and resonate with readers 
+									across the globe with a tapestry of titles ranging from 
+									self-help to science fiction, McDonalds’ eBooks are more 
+									than just pages-They’re portals...
+									<a href="#about">Read More</a>
 								</p>								
 							</div>
 						</div>
 						<div class="col-lg-5  col-md-6 col-sm-6" id="contact">
 							<div class="single-footer-widget">
 								<h6>Contact This Author</h6>
-								<p>Stay updated with our latest from this author. kindly fill and submit your details below</p>
+								<p>You can reach the Author through email using the email address provided below, or click the WhatsApp button to chat with him directly on WhatsApp.</p>
 								<div class="" id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="mail.php" method="get" class="form-inline">
+									<br>
+									<p>Email: <a href="#"><i class="fa-fa-email"></i>mcdonaldchris1982@gmail.com</a></p> <br>
+									<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-ca0c14d1-8aca-4447-96d3-9deca5b85c9a" data-elfsight-app-lazy></div>
+									<!-- <form target="_blank" novalidate="true" action="mail.php" method="get" class="form-inline">
 										<input id="name" class="form-control" name="NAME" placeholder="Enter Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
 										<input id="email" class="form-control mt-4" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
 										<input id="phone" class="form-control mt-4" name="PHONE" placeholder="Enter Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
@@ -276,7 +409,7 @@
 											<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
 
 										<div class="info"></div>
-									</form>
+									</form> -->
 								</div>
 							</div>
 						</div>						
