--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<!-- End banner Area -->	
 
 			<!-- Start about Area -->
-			<section class="section-gap info-area" id="about">
+			<section class="section-gap info-area mb-[-100px]" id="about">
 				<div class="container">				
 					<div class="single-info row mt-0 justify-center items-center">
 						<!-- <div class="col-lg-6 col-md-12 text-center no-padding info-left">
