--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		
 
 			<!-- Start price Area -->
-			<section class="price-area section-gap" id="price">
+			<section class="price-area section-gap mb-[-100px]" id="price">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-20 col-lg-9">
@@ -372,6 +372,128 @@
 			</section>
 			<!-- End price Area -->			
 			
+			<!-- Start testomial Area -->
+			<section class="testomial-area section-gap">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-20 col-lg-9">
+							<div class="title text-center">
+								<h1 class="mb-10 text-2xl">What Our Readers are Saying</h1>
+								<p class="mt-[-30px]">Read reviews from our customers</p>
+							</div>
+						</div>
+					</div>					
+					<div class="row">
+						<div class="active-tstimonial-carusel">
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t1.png" alt="">
+								<p class="desc">
+									Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
+								</p>
+								<h4>Mark Alviro Wiens</h4>
+								<p>
+									CEO at Google
+								</p>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t2.png" alt="">
+								<p class="desc">
+									Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
+								</p>
+								<h4>Mark Alviro Wiens</h4>
+								<p>
+									CEO at Google
+								</p>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t3.png" alt="">
+								<p class="desc">
+									Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
+								</p>
+								<h4>Mark Alviro Wiens</h4>
+								<p>
+									CEO at Google
+								</p>
+							</div>	
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t1.png" alt="">
+								<p class="desc">
+									Wonderful books, had great impact in my life and business
+								</p>
+								<h4>Mark Alviro Wiens</h4>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t2.png" alt="">
+								<p class="desc">
+									Wow! this author is the best of all best
+								</p>
+								<h4>Daniel W</h4>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t3.png" alt="">
+								<p class="desc">
+									Your books served as the solution I have been searching for. Thank you for the impack
+								</p>
+								<h4>Sarah Appiah</h4>
+							</div>															
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t1.png" alt="">
+								<p class="desc">
+									I love this auhor
+								</p>
+								<h4>Tonia B</h4>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t2.png" alt="">
+								<p class="desc">
+									Thank you for the discount!
+								</p>
+								<h4>Terry martins</h4>
+							</div>
+							<div class="single-testimonial item">
+								<img class="mx-auto" src="img/t3.png" alt="">
+								<p class="desc">
+									You saved my business with your outstanding ideas.
+								</p>
+								<h4>Veiro H</h4>
+							</div>														
+						</div>
+					</div>
+					<div class="row d-flex justify-content-center mt-32">
+						<div class="menu-content pb-20 col-lg-9">
+							<div class="title text-center">
+								<h1 class="mb-10 text-2xl">Submit a Review</h1>
+								<p class="mt-[-30px]">Tell the author about your experience</p>
+							</div>
+						</div>
+					
+						<form id="reviewForm" class="form-contact contact_form mx-4 mt-[-40px]" action="send_review.php" method="POST">
+							<div class="row">
+								<div class="col-lg-6 col-md-6">
+									<div class="form-group">
+										<input class="form-control" name="name" id="name" type="text" placeholder="Your Name">
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6">
+									<div class="form-group">
+										<input class="form-control" name="title" id="title" type="text" placeholder="Your Title">
+									</div>
+								</div>
+								<div class="col-lg-12">
+									<div class="form-group">
+										<textarea class="form-control w-100" name="review" id="review" cols="30" rows="9" placeholder="Your Review"></textarea>
+									</div>
+								</div>
+								<div class="col-lg-12 text-center">
+									<button type="submit" class="primary-btn">Submit</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+			<!-- End testomial Area -->
 
 			<!-- start footer Area -->		
 			<footer class="footer-area">
@@ -399,17 +521,7 @@
 									<br>
 									<p>Email: <a href="#"><i class="fa-fa-email"></i>mcdonaldchris1982@gmail.com</a></p> <br>
 									<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-ca0c14d1-8aca-4447-96d3-9deca5b85c9a" data-elfsight-app-lazy></div>
-									<!-- <form target="_blank" novalidate="true" action="mail.php" method="get" class="form-inline">
-										<input id="name" class="form-control" name="NAME" placeholder="Enter Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-										<input id="email" class="form-control mt-4" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-										<input id="phone" class="form-control mt-4" name="PHONE" placeholder="Enter Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-										<input id="message" class="form-control mt-4 h-24" name="MESSAGE" placeholder="Enter Your Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-
-											<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-
-										<div class="info"></div>
-									</form> -->
+									<div class="elfsight-app-ca0c14d1-8aca-4447-96d3-9deca5b85c9a" data-elfsight-app-lazy></div>
 								</div>
 							</div>
 						</div>						
@@ -454,6 +566,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Ezewe
 			<script src="js/main.js"></script>	
 		</body>
 	</html>
-
-
-
