--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 							</div>
 						</div>
 					
-						<form id="reviewForm" class="form-contact contact_form mx-4 mt-[-40px]" action="send_review.php" method="POST">
+						<form id="reviewForm" class="form-contact contact_form mx-4 mt-[-40px]" action="api/send_review.php" method="POST">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
 									<div class="form-group">
