Updated a new review

--- a/index.html
+++ b/index.html
@@ -375,42 +375,6 @@
                         <img class="mx-auto" src="img/header-img.png" alt="">
                     </div>
                     <p class="desc">
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
-                    </p>
-                    <h4>Mark Alviro Wiens</h4>
-                    <p>
-                        CEO at Google
-                    </p>
-                </div>
-                <div class="single-testimonial item">
-                    <div class="rounded-full w-16">
-                        <img class="mx-auto" src="img/header-img.png" alt="">
-                    </div>
-                    <p class="desc">
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
-                    </p>
-                    <h4>Mark Alviro Wiens</h4>
-                    <p>
-                        CEO at Google
-                    </p>
-                </div>
-                <div class="single-testimonial item">
-                    <div class="rounded-full w-16">
-                        <img class="mx-auto" src="img/header-img.png" alt="">
-                    </div>
-                    <p class="desc">
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector, hardware and more. laptop accessory
-                    </p>
-                    <h4>Mark Alviro Wiens</h4>
-                    <p>
-                        CEO at Google
-                    </p>
-                </div>	
-                <div class="single-testimonial item">
-                    <div class="rounded-full w-16">
-                        <img class="mx-auto" src="img/header-img.png" alt="">
-                    </div>
-                    <p class="desc">
                         Wonderful books, had great impact in my life and business
                     </p>
                     <h4>Mark Alviro Wiens</h4>
@@ -459,7 +423,16 @@
                         You saved my business with your outstanding ideas.
                     </p>
                     <h4>Veiro H</h4>
-                </div>														
+                </div>	
+                <div class="single-testimonial item">
+                    <div class="rounded-full w-16">
+                        <img class="mx-auto" src="img/header-img.png" alt="">
+                    </div>
+                    <p class="desc">
+                        What a great insight, keep the good work
+                    </p>
+                    <h4>Vivian</h4>
+                </div>	
             </div>
         </div>
         <div class="row d-flex justify-content-center mt-32">
